set(CMAKE_CXX_STANDARD 17)

# include(CTest)
enable_testing()

if (CLANG)
	add_compile_options("-stdlib=libc++ -lc++abi")
endif()

set(test_name "rendering")
add_executable(${test_name} "${test_name}/main.cpp")
set_target_properties(${test_name} PROPERTIES FOLDER "engine/tests")
target_link_libraries(${test_name} PRIVATE engine)
target_include_directories(${test_name} PRIVATE ${engine_INCLUDE_DIRS})
add_test(RendererTest ${test_name} --ctest)

set(test_name "text")
add_executable(${test_name} "${test_name}/main.cpp")
set_target_properties(${test_name} PROPERTIES FOLDER "engine/tests")
target_link_libraries(${test_name} PRIVATE engine)
target_include_directories(${test_name} PRIVATE ${engine_INCLUDE_DIRS})
add_test(TextTest ${test_name} --ctest)

set(test_name "guis")
add_executable(${test_name} "${test_name}/main.cpp")
set_target_properties(${test_name} PROPERTIES FOLDER "engine/tests")
target_link_libraries(${test_name} PRIVATE engine)
target_include_directories(${test_name} PRIVATE ${engine_INCLUDE_DIRS})
add_test(GuiTest ${test_name} --ctest)

set(test_name "entities")
add_executable(${test_name} "${test_name}/main.cpp")
set_target_properties(${test_name} PROPERTIES FOLDER "engine/tests")
target_link_libraries(${test_name} PRIVATE engine)
target_include_directories(${test_name} PRIVATE ${engine_INCLUDE_DIRS})
add_test(EntityTest ${test_name} --ctest)

set(test_name "networking")
add_executable(${test_name} "${test_name}/main.cpp")
set_target_properties(${test_name} PROPERTIES FOLDER "engine/tests")
target_link_libraries(${test_name} PRIVATE engine)
target_include_directories(${test_name} PRIVATE ${engine_INCLUDE_DIRS})
add_test(NetTest ${test_name} --ctest)

set(test_name "hello-world")
add_executable(${test_name} "${test_name}/main.cpp")
set_target_properties(${test_name} PROPERTIES FOLDER "engine/tests")
target_link_libraries(${test_name} PRIVATE engine)
target_include_directories(${test_name} PRIVATE ${engine_INCLUDE_DIRS})
add_test(HelloWorld ${test_name} --ctest)

set(test_name "polygon")
add_executable(${test_name} "${test_name}/main.cpp")
set_target_properties(${test_name} PROPERTIES FOLDER "engine/tests")
target_link_libraries(${test_name} PRIVATE engine)
target_include_directories(${test_name} PRIVATE ${engine_INCLUDE_DIRS})
add_test(Polygon ${test_name} --ctest)

if(OE_BUILD_MODE EQUAL 2)
target_compile_definitions(engine PRIVATE BUILD_VULKAN)

	set(test_name "vulkan")
	add_executable(${test_name} "vulkan/main.cpp" "vulkan/texture.png.hpp")
	set_target_properties(${test_name} PROPERTIES FOLDER "engine/tests")
	target_link_libraries(${test_name} PRIVATE engine)
	target_include_directories(${test_name} PRIVATE ${engine_INCLUDE_DIRS})
	add_test(VulkanTest ${test_name} --ctest)
endif()